fixed process on windows